[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "black, isort and mypy with pyright environments."
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.style.dependencies]
black = "^24.10.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.type.dependencies]
pyright = "^1.1.401"
mypy = "^1.16.0"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.isort]
src_paths = ["src", "tests"]
profile = "black"

[tool.mypy]
disable_error_code = ["attr-defined", "union-attr", "name-defined", "used-before-def", "call-arg", "arg-type", "call-overload", "valid-type", "var-annotated", "override", "return", "empty-body", "return-value", "assignment", "method-assign", "type-var", "operator", "index", "list-item", "dict-item", "typeddict-item", "typeddict-unknown-key", "has-type", "import", "no-redef", "func-returns-value", "abstract", "type-abstract", "safe-super", "valid-newtype", "exit-return", "name-match", "literal-required", "no-overload-impl", "unused-coroutine", "top-level-await", "assert-type", "truthy-function", "str-format", "str-bytes-safe", "annotation-unchecked", "syntax", "misc"]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"